--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -58,11 +58,13 @@
   name = "2020 Dubai (online)"
   parent = "past_editions"
   url = "https://straps-workshop.github.io/2020/"
+  weight = 100
 
 [[main]]
   name = "2019 Toulouse"
   parent = "past_editions"
   url = "https://straps-workshop.github.io/2019/"
+  weight = 200
 
 
 # Link to a PDF of your resume/CV from the menu.
