--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,15 +23,15 @@
 #  url = "#Camera-Ready"
 #  weight = 35
 
-[[main]]
-  name = "Program"
-  url = "#program"
-  weight = 40
+#[[main]]
+#  name = "Program"
+#  url = "#program"
+#  weight = 40
   
-  [[main]]
-  name = "Keynotes"
-  url = "#keynotes"
-  weight = 50
+#  [[main]]
+#  name = "Keynotes"
+#  url = "#keynotes"
+#  weight = 50
   
 [[main]]
   name = "Program Committee"
