--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,10 +23,10 @@
 #  url = "#Camera-Ready"
 #  weight = 35
 
-#[[main]]
-#  name = "Program"
-#  url = "#program"
-#  weight = 40
+[[main]]
+  name = "Program"
+  url = "#program"
+  weight = 40
 
  [[main]]
  name = "Keynotes"
